[gd_scene load_steps=5 format=2]

[ext_resource path="res://decicion2.gd" type="Script" id=1]
[ext_resource path="res://camino4.tscn" type="PackedScene" id=2]
[ext_resource path="res://conclusion2.tscn" type="PackedScene" id=3]
[ext_resource path="res://subdecision1.tscn" type="PackedScene" id=4]

[node name="decicion2" type="CanvasLayer"]
script = ExtResource( 1 )
accion_1 = ExtResource( 3 )
accion_2 = ExtResource( 2 )
accion_3 = ExtResource( 4 )

[node name="dialogo_0" type="Label" parent="."]
anchor_left = 0.498957
anchor_top = 0.819146
anchor_right = 0.498957
anchor_bottom = 0.819146
margin_left = -638.0
margin_top = -129.12
margin_right = 638.0
margin_bottom = 128.88
text = "Sí!
Hace mucho que no he vuelto a programar
(Desde que el profesor nos dejó hacer una pagina web local con php y xamp)"
percent_visible = -0.016129
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="accion1" type="Button" parent="."]
anchor_left = 0.197
anchor_top = 0.712
anchor_right = 0.197
anchor_bottom = 0.712
margin_left = -250.16
margin_top = 7.35999
margin_right = 249.84
margin_bottom = 32.36
text = "¿por que nopprogramamos algojuntos? UwU"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="accion2" type="Button" parent="."]
anchor_left = 0.197
anchor_top = 0.76
anchor_right = 0.197
anchor_bottom = 0.76
margin_left = -250.16
margin_top = 2.79999
margin_right = 249.84
margin_bottom = 27.8
text = "¿de que le sirve eselenguaje deprogramacion?"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="accion3" type="Button" parent="."]
anchor_left = 0.198
anchor_top = 0.804
anchor_right = 0.198
anchor_bottom = 0.804
margin_left = -251.44
margin_top = 1.12
margin_right = 248.56
margin_bottom = 26.12
text = "(no preguntar nada)"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="accion1" to="." method="_on_accion1_pressed"]
[connection signal="pressed" from="accion2" to="." method="_on_accion2_pressed"]
[connection signal="pressed" from="accion3" to="." method="_on_accion3_pressed"]
